--- a/3.0/aspnet/alpine3.9/amd64/Dockerfile
+++ b/3.0/aspnet/alpine3.9/amd64/Dockerfile
@@ -2,10 +2,10 @@ ARG REPO=mcr.microsoft.com/dotnet/core/runtime
 FROM $REPO:3.0-alpine3.9
 
 # Install ASP.NET Core
-ENV ASPNETCORE_VERSION 3.0.0-preview-19075-0444
+ENV ASPNETCORE_VERSION 3.0.0-preview3-19128-02
 
 RUN wget -O aspnetcore.tar.gz https://dotnetcli.blob.core.windows.net/dotnet/aspnetcore/Runtime/$ASPNETCORE_VERSION/aspnetcore-runtime-$ASPNETCORE_VERSION-linux-musl-x64.tar.gz \
-    && aspnetcore_sha512='a01d292bf4e6722a5354afdfff4d29fb4b8b09fcffc3e1ccceec7b889505acf87749a09829abc34827b73a7defa14164120b8e2e90f72c351b66d45539d38025' \
+    && aspnetcore_sha512='a6a6eec5b4c0bb50dcf6e63348fad9e84f336497d366c4fb04a2375d63c55d152d534112bf64aeedde3f0791719cd3497eadaff9553d2890995f240ec08c1ef4' \
     && echo "$aspnetcore_sha512  aspnetcore.tar.gz" | sha512sum -c - \
     && tar -zxf aspnetcore.tar.gz -C /usr/share/dotnet ./shared/Microsoft.AspNetCore.App \
     && rm aspnetcore.tar.gz
