--- a/3.0/aspnet/stretch-slim/arm32v7/Dockerfile
+++ b/3.0/aspnet/stretch-slim/arm32v7/Dockerfile
@@ -2,10 +2,10 @@ ARG REPO=mcr.microsoft.com/dotnet/core/runtime
 FROM $REPO:3.0-stretch-slim-arm32v7
 
 # Install ASP.NET Core
-ENV ASPNETCORE_VERSION 3.0.0-preview-19075-0444
+ENV ASPNETCORE_VERSION 3.0.0-preview3-19128-02
 
 RUN curl -SL --output aspnetcore.tar.gz https://dotnetcli.blob.core.windows.net/dotnet/aspnetcore/Runtime/$ASPNETCORE_VERSION/aspnetcore-runtime-$ASPNETCORE_VERSION-linux-arm.tar.gz \
-    && aspnetcore_sha512='82c0b5c5ba1ccd254e17056124d52c347485d18c3c5d6f8d1e15292840022061b43d30038332b6bfb209bae46f9e6faf22eb902c91f6186018eee7fd135326e5' \
+    && aspnetcore_sha512='741ea658f409e6705fd331eb9faeb2433b6c4f854ef83b27f548e56661faa93f00a8924a649451652508a6dd5a75d4e3328e8f4ebf74f02a59617505d1ff0bd2' \
     && echo "$aspnetcore_sha512  aspnetcore.tar.gz" | sha512sum -c - \
     && tar -zxf aspnetcore.tar.gz -C /usr/share/dotnet ./shared/Microsoft.AspNetCore.App \
     && rm aspnetcore.tar.gz
