--- a/3.0/sdk/nanoserver-1803/amd64/Dockerfile
+++ b/3.0/sdk/nanoserver-1803/amd64/Dockerfile
@@ -6,10 +6,10 @@ FROM mcr.microsoft.com/windows/servercore:1803 AS installer
 SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
 
 # Retrieve .NET Core SDK
-ENV DOTNET_SDK_VERSION 3.0.100-preview-010184
+ENV DOTNET_SDK_VERSION 3.0.100-preview3-010410
 
 RUN Invoke-WebRequest -OutFile dotnet.zip https://dotnetcli.blob.core.windows.net/dotnet/Sdk/$Env:DOTNET_SDK_VERSION/dotnet-sdk-$Env:DOTNET_SDK_VERSION-win-x64.zip; `
-    $dotnet_sha512 = 'c72a7ef5abda0b5d9cbe9b9326e2dddb5bfc7df3f6761bbd9e0c1961798cdd9c994eb2b4c8be4437f28d5e68e10f083617efedc8725dc3adf11f8911fdffa548'; `
+    $dotnet_sha512 = '6ea1afe2fee7e048e404d06cd8fb1162f0c20a762ed2efc205776ba6e73d21e87945b9294c02a2f0e5f60341026d3a43bee497aa8d7fb9bc624ea549f57a7012'; `
     if ((Get-FileHash dotnet.zip -Algorithm sha512).Hash -ne $dotnet_sha512) { `
         Write-Host 'CHECKSUM VERIFICATION FAILED!'; `
         exit 1; `
